syntax = "proto3";

package employee;

option go_package = "/employee";

message TokenEmployeeRegisterRequest {
    int64 ownerId = 1;
    int64 institutionId = 2;
}

message TokenEmployeeRegisterResponse {
    string token = 1;
    string result = 2;
}


service TokenEmployeeRegisterService {
    rpc RegisterEmployee(TokenEmployeeRegisterRequest) returns (TokenEmployeeRegisterResponse);
}
